--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -1,7 +1,23 @@
-$heading-font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif
-$body-font-family: $heading-font-family
+$heading-font-family: "Rubik One", display
+$body-font-family: "Cabin", "Arial", sans-serif
+$body-condensed-font-family: "Cabin_Condensed", sans-serif
 
 $header-background: none
 $header-border-bottom-width: 0
-$hero-background-color: none
+$hero-background-color: linear-gradient( #BA3033, #6B0102)
 $footer-background-color: none
+
+/* Spacing */
+$spacing1: 24px !default
+$spacing2: 48px !default
+$spacing3: 64px !default
+$spacing4: 128px !default
+$spacing5: 256px !default
+
+/* Grid */
+$grid-gutter: 40px
+$grid-max-width: 1280px
+
+$lead-sidebar-font-family: $body-font-family
+$meta-font-family: $body-font-family
+$h5-font-family: $body-font-family
