--- a/assets/sass/_fonts.sass
+++ b/assets/sass/_fonts.sass
@@ -1,1 +1,18 @@
-// @include font-face("Font name", font-file-in-fonts-without-extensions)
+//Typographie de texte
+// Fonte : Cabin
+
+@include font-face("Cabin", Cabin-Regular, $exts: (ttf))
+@include font-face("Cabin", Cabin-Italic, $style: italic, $exts: (ttf))
+@include font-face("Cabin", Cabin-BoldItalic, $style: italic, $weight: 700, $exts: (ttf))
+@include font-face("Cabin", Cabin-Bold, $weight: 700, $exts: (ttf))
+
+//Typographie de texte alt
+// Fonte : Cabin
+
+@include font-face("Cabin_Condensed", Cabin_Condensed-Regular, $exts: (ttf))
+@include font-face("Cabin_Condensed", Cabin_Condensed-Italic, $style: italic, $exts: (ttf))
+@include font-face("Cabin_Condensed", Cabin_Condensed-BoldItalic, $style: italic, $weight: 700, $exts: (ttf))
+@include font-face("Cabin_Condensed", Cabin_Condensed-Bold, $weight: 700, $exts: (ttf))
+
+//headlines
+@include font-face("Rubik One", RubikMonoOne-Regular, $exts: (ttf))
