--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -18,6 +18,16 @@ $spacing5: 256px !default
 $grid-gutter: 40px
 $grid-max-width: 1280px
 
+
+/* Colors */
+$color-background-alt:rgb(197, 102, 103)
+
+
+
 $lead-sidebar-font-family: $body-font-family
 $meta-font-family: $body-font-family
 $h5-font-family: $body-font-family
+
+$footer-background-color: $color-background-alt
+
+$hero-color: $color-text-alt
