--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -6,3 +6,8 @@
         color: #ffffff
     .logo img
         content: url("/assets/images/sec_logo_w.svg")
+
+//accueil feature
+.feature-accueil
+    ul
+        grid-template-columns: repeat(2,1)
