--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -30,4 +30,4 @@ $h5-font-family: $body-font-family
 
 $footer-background-color: $color-background-alt
 
-$hero-color: $color-text-alt
+$hero-color: #ffffff
