--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -10,4 +10,4 @@
 //accueil feature
 .block-class-feature-accueil
     ul
-        grid-template-columns: repeat(2,1)
+        grid-template-columns: repeat(2,1fr)
