--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -8,6 +8,6 @@
         content: url("/assets/images/sec_logo_w.svg")
 
 //accueil feature
-.block-class-feature-accueil
+body.full-width .block-class-feature-accueil
     ul
         grid-template-columns: repeat(2,1fr)
