--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -20,8 +20,14 @@ $grid-max-width: 1280px
 
 
 /* Colors */
-$color-background-alt: #f7a6a8
+$color-background-alt: #fbe3e3
 
+/*Titles*/
+$h1-size-desktop: 2.5rem
+$h2-size-desktop: 2rem
+
+h1, h2
+    letter-spacing: -5%
 
 
 $lead-sidebar-font-family: $body-font-family
