changing bg hero

--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -4,7 +4,7 @@ $body-condensed-font-family: "Cabin_Condensed", sans-serif
 
 $header-background: none
 $header-border-bottom-width: 0
-$hero-background-color: linear-gradient( #BA3033, #6B0102)
+$hero-background: linear-gradient( #e60058, #BF0F52)
 $footer-background-color: none
 
 /* Spacing */
