--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -8,9 +8,9 @@
         content: url("/assets/images/sec_logo.svg")
 
 .hero
-    background-color: linear-gradient( #e60058, #BF0F52)
-    background-image: url("/assets/images/connections.svg")
-    background-blend-mode: soft-light
+    background-image: linear-gradient( #e60058, #BF0F52)
+    background-image: url("/assets/images/texture.svg")
+    background-blend-mode: screen
 
 //accueil feature
 body.full-width .block-class-feature-accueil
