adding logo + changing hero

--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -1,16 +1,18 @@
 //header logo and text hero white
-.page__home header:not(.is-sticky)
+header:not(.is-sticky)
     .search-button--primary
         color: #ffffff
     .menu a
         color: #ffffff
     .logo img
-        content: url("/assets/images/sec_logo.svg")
+        content: url("/assets/images/logo_white.svg")
+
+
 
 .hero
-    background-image: linear-gradient( #e60058, #BF0F52)
+    background-image:  #e60058
     background-image: url("/assets/images/texture.svg")
-    background-blend-mode: screen
+    background-blend-mode: darken
 
 //accueil feature
 body.full-width .block-class-feature-accueil
