--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -1,16 +1,21 @@
-//header logo and text hero white
+header(.is-sticky)
+    .logo img
+        content: url("/assets/images/logo_color.PNG")
+
+
+//header logo and text hero white    
 header:not(.is-sticky)
     .search-button--primary
         color: #ffffff
     .menu a
         color: #ffffff
     .logo img
-        content: url("/assets/images/logo_white.svg")
+        content: url("/assets/images/logo_white.png")
 
 
 
 .hero
-    background-image:  #e60058
+    background-color:  #e60058
     background-image: url("/assets/images/texture.svg")
     background-blend-mode: darken
 
