--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -19,7 +19,12 @@ footer#document-footer .logo img
     background-image: url("/assets/images/texture.svg")
     background-blend-mode: darken
 
+    .hero-actions
+        a.btn
+            color: #ffffff
+            border-color: #ffffff
+
 //accueil feature
-body.full-width .block-class-feature-accueil, body.full-width.home_page .categories--grid
+body.full-width .block-class-feature-accueil
     ul
         grid-template-columns: repeat(2,1fr)
