--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -23,6 +23,9 @@ footer#document-footer .logo img
         a.btn
             color: #ffffff
             border-color: #ffffff
+            &:hover, &:focus, &:active
+                color: #111111
+
 
 //accueil feature
 body.full-width .block-class-feature-accueil
