--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -9,9 +9,13 @@ header:not(.is-sticky)
         content: url("/assets/images/logo_white.png")
 
 header#document-header .logo img
-    height: 72px
+    height: 80px
 footer#document-footer .logo img
-    height: 72px
+    height: 80px
+
+header#document-header nav.primary-menu
+    padding-top: 1.25rem
+    padding-bottom: 1.25rem
 
 
 .hero
@@ -31,3 +35,9 @@ footer#document-footer .logo img
 body.full-width .block-class-feature-accueil
     ul
         grid-template-columns: repeat(2,1fr)
+
+.block .block-title
+    font-weight: 700
+
+.block-features li .name
+    color: #e60058
