--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -20,7 +20,7 @@ $grid-max-width: 1280px
 
 
 /* Colors */
-$color-background-alt: #fbe3e3
+$color-background-alt: #ffb0ce
 
 /*Titles*/
 $h1-size-desktop: 2.5rem
