--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -21,6 +21,8 @@ $grid-max-width: 1280px
 
 /* Colors */
 $color-background-alt: #ffb0ce
+$color-accent: #0038FF
+$color-hero:#ff4151
 
 /*Titles*/
 $h1-size-desktop: 2.5rem
