--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -9,17 +9,17 @@ header:not(.is-sticky)
         content: url("/assets/images/logo_white.png")
 
 header#document-header .logo img
-    height: 80px
+    height: 2rem
 footer#document-footer .logo img
-    height: 80px
+    height: 2rem
 
 header#document-header nav.primary-menu
-    padding-top: 1.25rem
-    padding-bottom: 1.25rem
+    padding-top: 0.9rem
+    padding-bottom: 0.9rem
 
 
 .hero
-    background-color:  #e60058
+    background-color: $color-hero
     background-image: url("/assets/images/texture.svg")
     background-blend-mode: darken
 
@@ -40,4 +40,4 @@ body.full-width .block-class-feature-accueil
     font-weight: 700
 
 .block-features li .name
-    color: #e60058
+    color: $color-accent
