--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -20,7 +20,7 @@ $grid-max-width: 1280px
 
 
 /* Colors */
-$color-background-alt: #ffb8be
+$color-background-alt: #ffe3e6
 $color-accent: #0038FF
 $color-hero: #ff4151
 
