--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -9,9 +9,9 @@ header:not(.is-sticky)
         content: url("/assets/images/logo_white.png")
 
 header#document-header .logo img
-    height: 3.2rem
+    height: 5rem
 footer#document-footer .logo img
-    height: 3.2rem
+    height: 7rem
 
 header#document-header nav.primary-menu
     padding-top: 0.9rem
@@ -29,6 +29,14 @@ header#document-header nav.primary-menu
             border-color: #ffffff
             &:hover, &:focus, &:active
                 color: #111111
+
+footer
+    background-image: url("/assets/images/texture.svg")
+    background-blend-mode: soften
+    padding-bottom: 2.5rem
+
+footer#document-footer .container
+    padding-bottom: 0.5rem
 
 
 //accueil feature
