--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -30,13 +30,13 @@ header#document-header nav.primary-menu
             &:hover, &:focus, &:active
                 color: #111111
 
-footer
+footer#document-footer
     background-image: url("/assets/images/texture.svg")
     background-blend-mode: soften
     padding-bottom: 2.5rem
 
 footer#document-footer .container
-    padding-bottom: 0.5rem
+    padding-bottom: 1rem
 
 
 //accueil feature
