--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -49,3 +49,16 @@ body.full-width .block-class-feature-accueil
 
 .block-features li .name
     color: $color-accent
+
+// H2 POST TITLES
+article.post.without-image
+    padding-bottom: 0
+    .post-content
+        grid-column: 1/13
+        
+        h2.post-title
+            font-family: $body-font-family
+            letter-spacing: 0
+
+        .post-categories
+            display: none
