--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -17,6 +17,9 @@ header#document-header nav.primary-menu
     padding-top: 0.9rem
     padding-bottom: 0.9rem
 
+    button.header-button
+        color: #fff
+
 
 .hero
     background-color: $color-hero
@@ -32,7 +35,7 @@ header#document-header nav.primary-menu
 
 footer#document-footer
     background-image: url("/assets/images/texture.svg")
-    background-blend-mode: soften
+    background-blend-mode: soft-light
     padding-bottom: 2.5rem
 
 footer#document-footer .container
