--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -54,8 +54,8 @@ body.full-width .block-class-feature-accueil
     color: $color-accent
 
 // H2 POST TITLES
-article.post.without-image
-    padding-bottom: 0
+article.post
+    padding-bottom: 1rem
     .post-content
         grid-column: 1/13
         
