--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -54,7 +54,7 @@ body.full-width .block-class-feature-accueil
     color: $color-accent
 
 // H2 POST TITLES
-article.post
+.posts_categories__term .posts--list article.post
     padding-bottom: 1rem
     .post-content
         grid-column: 1/13
