--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -26,12 +26,15 @@ header#document-header nav.primary-menu
     background-image: url("/assets/images/texture.svg")
     background-blend-mode: darken
 
-    .hero-actions
-        a.btn
-            color: #ffffff
-            border-color: #ffffff
-            &:hover, &:focus, &:active
-                color: #111111
+    .hero-text
+        margin-top: 1rem;
+
+        .hero-actions
+            a.btn
+                color: #ffffff
+                border-color: #ffffff
+                &:hover, &:focus, &:active
+                    color: #111111
 
 footer#document-footer
     background-image: url("/assets/images/texture.svg")
