--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -27,7 +27,7 @@ header#document-header nav.primary-menu
     background-blend-mode: darken
 
     .hero-text
-        margin-top: 1rem;
+        margin-top: 1rem
 
         .hero-actions
             a.btn
