--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -25,16 +25,16 @@ header#document-header nav.primary-menu
     background-color: $color-hero
     background-image: url("/assets/images/texture.svg")
     background-blend-mode: darken
+    .content
+        .hero-text
+            margin-top: 0
 
-    .hero-text
-        margin-top: 1rem
-
-        .hero-actions
-            a.btn
-                color: #ffffff
-                border-color: #ffffff
-                &:hover, &:focus, &:active
-                    color: #111111
+            .hero-actions
+                a.btn
+                    color: #ffffff
+                    border-color: #ffffff
+                    &:hover, &:focus, &:active
+                        color: #111111
 
 footer#document-footer
     background-image: url("/assets/images/texture.svg")
