--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -57,7 +57,7 @@ body.full-width .block-class-feature-accueil
     color: $color-accent
 
 // H2 POST TITLES
-.posts_categories__term .posts--list article.post
+.posts_categories__term .posts--list article, .posts__section .posts--list article
     padding-bottom: 1rem
     .post-content
         grid-column: 1/13
