--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -25,6 +25,7 @@ header#document-header nav.primary-menu
     background-color: $color-hero
     background-image: url("/assets/images/texture.svg")
     background-blend-mode: darken
+    min-height: 300px
     .content
         .hero-text
             margin-top: 0
