--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -19,6 +19,19 @@ header#document-header nav.primary-menu
 
     button.header-button
         color: #fff
+    
+    #navigation.menu
+        .nav-level-1
+            li:last-child
+                a
+                    background: white
+                    padding: 0.5rem 1rem
+                    border-radius: 40px
+                    border 1px solid white
+                    color: $color-hero
+
+                    &:hover, &:focus, &:active
+                        background: rgba(255,255,255,0)
 
 
 .hero
