--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -22,6 +22,7 @@ header#document-header nav.primary-menu
     
     #navigation.menu
         .nav-level-1
+            color: white
             li:last-child
                 a
                     background: white
@@ -32,6 +33,9 @@ header#document-header nav.primary-menu
 
                     &:hover, &:focus, &:active
                         background: rgba(255,255,255,0)
+                        color: white
+                        border: 1px solid white
+                        border-radius: 40px
 
 
 .hero
