--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -27,7 +27,8 @@ header#document-header nav.primary-menu
                 a
                     background: white
                     padding: 0.5rem 1rem
-                    border-radius: 40px
+                    margin-left: 1rem
+                    border-radius: 4px
                     border 1px solid white
                     color: $color-hero
 
@@ -35,7 +36,7 @@ header#document-header nav.primary-menu
                         background: rgba(255,255,255,0)
                         color: white
                         border: 1px solid white
-                        border-radius: 40px
+                        border-radius: 4px
 
 
 .hero
