--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -31,12 +31,14 @@ header#document-header nav.primary-menu
                     border-radius: 4px
                     border 1px solid white
                     color: $color-hero
+                    transition: all 0.3s ease-out
 
                     &:hover, &:focus, &:active
                         background: rgba(255,255,255,0)
                         color: white
                         border: 1px solid white
                         border-radius: 4px
+                        transition: all 0.3s ease-out
 
 
 .hero
