--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -7,6 +7,27 @@ header:not(.is-sticky)
         color: #ffffff
     .logo img
         content: url("/assets/images/logo_white.png")
+    
+    #navigation.menu
+        .nav-level-1
+            color: white
+            li:last-child
+                a
+                    background: white
+                    padding: 0.5rem 1rem
+                    margin-left: 1rem
+                    border-radius: 4px
+                    border 1px solid white
+                    color: $color-hero
+                    transition: background .25s ease,border .25s ease,color .25s ease;
+
+                    &:hover, &:focus, &:active
+                        background: rgba(255,255,255,0)
+                        color: white
+                        border: 1px solid white
+                        border-radius: 4px
+
+header
 
 header#document-header .logo img
     height: 5rem
@@ -25,20 +46,20 @@ header#document-header nav.primary-menu
             color: white
             li:last-child
                 a
-                    background: white
+                    background: $color-hero
                     padding: 0.5rem 1rem
                     margin-left: 1rem
                     border-radius: 4px
-                    border 1px solid white
-                    color: $color-hero
-                    transition: all 0.3s ease-out
+                    border 1px solid $color-hero
+                    color: white
+                    transition: background .25s ease,border .25s ease,color .25s ease;
 
                     &:hover, &:focus, &:active
                         background: rgba(255,255,255,0)
-                        color: white
-                        border: 1px solid white
+                        color: $color-hero
+                        border: 1px solid $color-hero
                         border-radius: 4px
-                        transition: all 0.3s ease-out
+                        
 
 
 .hero
