--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -8,6 +8,7 @@ header:not(.is-sticky)
     .logo img
         content: url("/assets/images/logo_white.png")
 
+header#document-header:not(.is-sticky) nav.primary-menu
     button.header-button
         color: #fff
     
